TODO
* add support for retrieving identifier values
  - add test

20120408
* updated dependencies

20120407
* updated dependencies

20120406
* updated dependencies

20120314
* worked on adding tests
* code clean up
* updated include header
* updated man page

20120312
* Created stand-alone version of version used in liblnk
