@@ -2,6 +2,10 @@ TODO
 * add support for retrieving identifier values
   - add test
 
+20120417
+* updated dependencies
+* added with index functions
+
 20120408
 * updated dependencies
 
